[package]
name = "stratadb-node"
version = "0.13.1"
edition = "2021"
description = "Node.js bindings for StrataDB"
license = "MIT"
repository = "https://github.com/stratalab/strata-node"

[lib]
crate-type = ["cdylib"]

[features]
default = ["embed"]
embed = ["stratadb/embed", "dep:strata-intelligence"]

[dependencies]
napi = { version = "2", features = ["napi8", "async", "serde-json", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }

# Use git dependency during development
stratadb = { git = "https://github.com/stratalab/strata-core", branch = "main" }

# Intelligence crate for model download (embed feature only)
strata-intelligence = { git = "https://github.com/stratalab/strata-core", branch = "main", features = ["embed"], optional = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
